--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,4 +5,14 @@
     onclick="window.location.href='{{ site.url }}{{ doc.url }}'"
   />
   <h1>Examples</h1>
+
+  <a
+    class="github-button"
+    href="https://github.com/FreeFEM/FreeFem-sources"
+    data-color-scheme="no-preference: dark; light: light; dark: dark;"
+    data-size="large"
+    data-show-count="true"
+    aria-label="Star FreeFEM/FreeFem-sources on GitHub"
+    >Star</a
+  >
 </header>
