--- a/_layouts/doc.html
+++ b/_layouts/doc.html
@@ -11,6 +11,6 @@
       <h2>{{ page.title }}</h2>
       {{ content }}
     </main>
-    {% include footer.html %} {% include mathjax.html %}
+    {% include footer.html %}
   </body>
 </html>
