--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -3,6 +3,7 @@
 <script
   id="MathJax-script"
   async
+  defer
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
 ></script>
 <script>
