--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -31,6 +31,11 @@ header h1 {
   margin: 20px;
 }
 
+header span {
+  margin-left: auto;
+  margin-right: 20px;
+}
+
 footer {
   margin-top: auto;
   height: 80px;
@@ -60,6 +65,12 @@ main a {
   color: #00007f;
 }
 
+main h2 {
+  margin-bottom: 0;
+}
+
+main .category,
+main .tags,
 main .date {
   font-size: 0.8em;
   color: #7f7f7f;
@@ -67,4 +78,65 @@ main .date {
 
 main article {
   margin-bottom: 20px;
+}
+
+.filters {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#categories {
+  margin-right: 8px;
+}
+
+#categories select {
+  padding: 8px;
+  border: 1px solid #00007f;
+  background: white;
+}
+
+#categories select:focus {
+  outline: none;
+}
+
+#category option {
+  padding: 8px;
+}
+
+#search {
+  display: flex;
+}
+
+#search input {
+  padding: 8px;
+  padding-right: 0;
+  border: 1px solid #00007f;
+  border-right: 0;
+}
+
+#search input:focus {
+  outline: none;
+}
+
+#search input::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  height: 1em;
+  width: 1em;
+  background: url("/assets/img/circle-xmark.svg") no-repeat center;
+}
+
+#search button {
+  border: 1px solid #00007f;
+  border-left: 0;
+  padding: 8px;
+  padding-left: 0;
+  background-color: white;
+  cursor: pointer;
+  display: flex;
+}
+
+#search button img {
+  height: 17px;
+  color: #00007f;
 }
