--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,28 +27,34 @@
           <button>
             <img src="/assets/img/magnifying-glass.svg" alt="search" />
           </button>
-          <div id="search-results"></div>
+          <div id="search-results">
+            <button><img src="/assets/img/xmark.svg" alt="close" /></button>
+            <div id="search-results-content"></div>
+          </div>
+          {% for doc in site.docs %}
+          <script>
+            addKeys("{{ doc.url }}", "{{ doc.title }}", "{{ doc.tags }}");
+          </script>
+          {% endfor %}
+          <script>
+            initSearch();
+          </script>
         </div>
       </div>
-      <script>
-        initSearch();
-      </script>
 
       <!-- Content -->
       {% for doc in site.docs %}
       <article>
         <h2><a href="{{ site.url }}{{ doc.url }}">{{ doc.title }}</a></h2>
         <div class="subtitle">
-          <p class="category">
-            <strong>Category:</strong> {{ doc.categories }}
-          </p>
+          <p class="category"><strong>Category:</strong> {{ doc.category }}</p>
           <p class="tags"><strong>Tags:</strong> {{ doc.tags }}</p>
           <p class="date">
             <strong>Data:</strong> {{ doc.date | date_to_string }}
           </p>
         </div>
         {{ doc.content | strip_html | truncatewords: 50 }}
-        <a href="{{ site.url }}{{ doc.url }} ">See more...</a>
+        <a href="{{ site.url }}{{ doc.url }}">See more...</a>
         {% if forloop.last %} {% else %}
         <hr />
         {% endif %}
