--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -106,6 +106,7 @@ main article {
 
 #search {
   display: flex;
+  position: relative;
 }
 
 #search input {
@@ -126,7 +127,7 @@ main article {
   background: url("/assets/img/circle-xmark.svg") no-repeat center;
 }
 
-#search button {
+#search > button {
   border: 1px solid #00007f;
   border-left: 0;
   padding: 8px;
@@ -136,7 +137,46 @@ main article {
   display: flex;
 }
 
-#search button img {
+#search > button img {
   height: 17px;
   color: #00007f;
+}
+
+#search-results {
+  display: none;
+  position: absolute;
+  top: 40px;
+  left: 5px;
+  min-width: 25vw;
+  max-width: 50vw;
+  max-height: 50vh;
+  padding: 8px;
+  box-shadow: 1px 1px 2px 1px #00007f;
+}
+
+#search-results > button {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  display: flex;
+}
+
+#search-results > button img {
+  height: 17px;
+  color: #00007f;
+}
+
+#search-results div {
+  padding: 4px;
+}
+
+#search-results div:hover {
+  background-color: rgba(0, 0, 127, 0.1);
+}
+
+#search-results h2 {
+  margin: 0;
 }
