--- a/_includes/head_includes.html
+++ b/_includes/head_includes.html
@@ -1,15 +1,12 @@
-<link
-  rel="stylesheet"
-  href="{{ site.url }}{{ doc.url }}/assets/css/index.css"
-/>
-<link rel="stylesheet" href="{{ site.url }}{{ doc.url }}/assets/css/vs.css" />
+<link rel="stylesheet" href="{{ site.url }}/assets/css/index.css" />
+<link rel="stylesheet" href="{{ site.url }}/assets/css/vs.css" />
 
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 
 <link
   rel="icon"
   type="image/svg"
-  href="{{ site.url }}{{ doc.url }}/assets/img/symbol_FreeFEM_128x128.svg"
+  href="{{ site.url }}/assets/img/symbol_FreeFEM_128x128.svg"
 />
 
 <!-- Github -->
@@ -24,12 +21,12 @@
 ></script> -->
 
 <!-- Categories -->
-<script src="{{ site.url }}{{ doc.url }}/assets/js/categories.js"></script>
+<script src="{{ site.url }}/assets/js/categories.js"></script>
 
 <!-- Fuse -->
 <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
 
 <!-- Search -->
-<script src="{{ site.url }}{{ doc.url }}/assets/js/search.js"></script>
+<script src="{{ site.url }}/assets/js/search.js"></script>
 
 {% include mathjax.html %}
