--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -124,7 +124,7 @@ main article {
   -webkit-appearance: none;
   height: 1em;
   width: 1em;
-  background: url("/assets/img/circle-xmark.svg") no-repeat center;
+  background: url("{{ site.url }}/assets/img/circle-xmark.svg") no-repeat center;
 }
 
 #search > button {
