--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header>
   <img
-    src="{{ site.url }}/assets/img/logo_FreeFEM.svg"
+    src="{{ site.baseurl }}/assets/img/logo_FreeFEM.svg"
     alt="FreeFEM logo"
-    onclick="window.location.href='{{ site.url }}'"
+    onclick="window.location.href='{{ site.baseurl }}'"
   />
   <h1>Examples</h1>
 
